# xpkg_ground_filter

./: README.md
xpkg_ground_filter/: CMakeLists.txt  package.xml
xpkg_ground_filter/ground_filter/: data_interface.cc  data_interface.h  ground_filter.h  main.cc
xpkg_ground_filter/launch/: xpkg_ground_filter.launch
xpkg_ground_filter_nodelet/: CMakeLists.txt  nodelet_plugin.xml  package.xml
xpkg_ground_filter_nodelet/ground_filter/: data_interface.cc  data_interface.h  ground_filter.cc  ground_filter.h  hex_utility.h  plugin.cc
xpkg_ground_filter_nodelet/launch/: xpkg_ground_filter.launch
